# Companion

./: .env.template  .gitignore  .replit  README.md  SYSTEM_ANALYSIS.md  analytics.py  build_finetune.py  check_index.py  daily_insights.py  google_calendar.py  ingest.py  ingest_simple.py  integrations.py  logging  main.py  pyproject.toml  requirements.txt  setup_complete.py  setup_integrations.py  voice_handler.py
attached_assets/: Pasted-Below-is-a-concise-teardown-of-Companion-2-as-it-arrived-in-Companion-3-zip-followed-by-a-st-1748711740308.txt
attached_assets/mnt/data/replit_companion_setup/: README_REPLIT.md  build_finetune.py  ingest.py  requirements.txt
data/processed/: knowledge.json
docs/: core_personal_data.md  daily_data_template.md  daily_notes.md  goals.md  ideas.md  michael_profile.md  personal_data_sources.md  projects.md  welcome.md
scripts/: add_family_info.py  boot_memory.py  clean_ingest.py  import_personal_data.py  priority_data.py  validate_data.py  validate_personal_data.py
static/: index.html  manifest.json
